--- a/html/facebook/css/default.css
+++ b/html/facebook/css/default.css
@@ -1,63 +1,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
+body{
+    background-color: #f0f2f5;
 }
 
-body{
-    
+#whole{
+    width: auto;
+    height:500px;
+    /* border: 3px solid black; */
     font-family: 'Nanum Gothic', sans-serif;
     background-color: #f0f2f5;
+    margin: 0 auto;
+    padding: 0;
 
 }
-.title{
+#hidden{
+    width: 950px;
+    height: 500px;
+    margin: 0 auto;
+    overflow: hidden;
 
-    width: auto;
-    height: auto;
-    color: blue;
-    font-weight: bold;
-    font-size: 50px;
-    margin-top: 200px;
-    margin-left: 200px;
+}
+#img{
+
+    width: 300px;
+    height: 150px;
+    margin-top: 150px;
+    padding-bottom: 0;
+    float: left;
     
 }
 
-.subtitle{
-    width: 450px;
+#img>h2{
+    width: 410px;
     height: auto;
-    font-size: 26px;
-    margin-left: 200px;
-    padding-top: 10px;
+    margin-left: 30px;
+    margin-top: 0;
+    padding-top: 0;
+    
 }
-#box{
-    width: 400px;
+#etc{
+    width: 420px;
+    height: 430px;
+    float: right;
+    margin-top: 70px;
+    margin-bottom: 0;
+}
+#loginform{
+    width: 380px;
     height: 350px;
     background-color: white;
     border: 1px solid rgb(245, 244, 244, 0.5);
-
     margin: 10px auto;
     border-radius: 8px;
-
     box-shadow: 3px 3px 3px #ddd;
-    
-    margin-right: 150px;
-    margin-bottom: 200px;
-    padding: 0;
-   
 
 }
 
 #user{
-    width: 370px;
+    width: 345px;
     height: 50px;
     border: 2px solid #eee;
     border-radius: 5px;
     margin-left: 10px;
     margin-top: 10px;
+    font-size: 15px;
+    color: rgba(221, 221, 221, 0.5);
+    padding-left: 10px;
 }
 #login{
-    width: 370px;
+    width: 360px;
     height: 50px;
     border: 0;
     border-radius: 5px;
@@ -83,28 +94,38 @@ body{
     margin-left: 120px;
     margin-top: 30px;
     background-color: rgb(45, 180, 3);
-    font-size: 20px;
+    font-size: 17px;
     font-weight: bold;
     color: white;
 }
 p{
-    margin-right: 150px;
+    font-size: 14px;
+    text-align: center;
 }
 
 .footer{
     background-color: white;
     color: #807878be;
     width: auto;
+    height: 150px;
     font-size: 12px;
-    margin-top: 8px;
-    text-align: left;
+    margin-top: 50px;
+    text-align: center;
 }
 
-ul{
+
+#lang{
+    padding-top: 20px;
+    margin-left: 100px;
+    background-color: white;
+    width: 1100px;
+    height: auto;
     text-align: left;
-   
+
 }
 ul>li {
     display: inline-block;
     margin-left:30px;
+    text-align: left;
+
 }
