--- a/spring/Boot/SpringBootBoard/src/main/resources/templates/board/view.html
+++ b/spring/Boot/SpringBootBoard/src/main/resources/templates/board/view.html
@@ -7,6 +7,9 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
 
@@ -62,7 +65,7 @@
 
         <div class="text-end">
             <a class="btn btn-warning" th:href="@{/board/edit(bno=${boardView.bno}, p=${currentPageNum})}">수정</a>
-            <a class="btn btn-danger" th:onclick="'deleteBoard('+${boardView.bno}+')'">삭제</a>
+            <a class="btn btn-danger" id="delete" th:onclick="'deleteBoard('+${boardView.bno}+')'">삭제</a>
             <a class="btn btn-primary" th:href="@{/board/list(p=${currentPageNum})}">리스트</a>
         </div>
 
@@ -125,6 +128,101 @@
     }
 
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+<script th:inline="javascript">
+
+    var bno = [[${boardView.bno}]]
+
+</script>
+
+<script>
+
+
+    $(document).ready(function (){
+
+
+        // 댓글 리스트 출력 영역 캐스팅
+        let replyList = $('#replyList').val()
+
+        // 댓글 작성 버튼
+        $('#btn_reply').click(function (){
+
+            let reply = $('#reply').val()
+            let replyer = $('#replyer').val()
+
+            $.ajax({
+                url: '/reply',
+                type: 'post', // post put delete
+                data: {reply: reply, replyer: replyer},
+                success: function (data) {
+                    console.log('통신 결과', data)
+                    $('#replyList').append(data)
+                }
+            })
+            $.each(data, function(){
+
+
+
+                    let html = '<td class="col-2">'+reply.replyer+'</td>'
+                    html += '<td class="col">'+reply.reply+'</td>'
+                    html += '<td class="col-2">'+reply.replyDate+'</td>'
+                    html += '<td class="col-2">' +
+                        '<a href="javascript:showEditModal('+reply.rno+')" class="badge bg-warning text-decoration-none">수정</a>' +
+                        '<a href="javascript:deleteReply('+reply.rno+')" class="badge bg-danger text-decoration-none">삭제</a>' +
+                        '</td>'
+
+                    $('<tr></tr>').html().attr('class', 'fs-6 text-center').attr('tr-index', reply.rno).appendTo('#replyList')
+
+            })
+
+        })
+
+        // 페이지가 로드되면 리스트 출력
+        setList()
+
+    })
+
+
+    function setList() {
+
+        let bno = bno
+        let reply = $('#reply').val()
+        let replyer = $('#replyer').val()
+
+        // 비동기 통신 : 댓글 리스트 가져오기
+        $.ajax({
+            url : '/reply/' + bno,
+            type : 'get',
+            success : function (data){
+
+                $.each(data, (index, item)=> {
+
+
+                    // 새로운 tr을 만들어서 replyIndex 영역에 추가
+                    let html = '<td class="col-2">' + reply.replyer + '</td>'
+                    html += '<td class="col">' + reply.reply + '</td>'
+                    html += '<td class="col-2">' + reply.replyDate + '</td>'
+                    html += '<td class="col-2">' +
+                        '<a href="javascript:showEditModal(' + reply.rno + ')" class="badge bg-warning text-decoration-none">수정</a>' +
+                        '<a href="javascript:deleteReply(' + reply.rno + ')" class="badge bg-danger text-decoration-none">삭제</a>' +
+                        '</td>'
+
+                    $('<tr></tr>').html(html).attr('class', 'fs-6 text-center').attr('tr-index', reply.rno).appendTo('#replyList')
+
+                })
+
+            }
+
+            })
+
+    }
+
+
+</script>
+<!--
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -232,6 +330,7 @@
     }
 
 </script>
+-->
 
 </body>
 </html>
