--- a/spring/Boot/SpringBootBoard/src/main/resources/templates/board/view.html
+++ b/spring/Boot/SpringBootBoard/src/main/resources/templates/board/view.html
@@ -1,61 +1,48 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:input="http://www.w3.org/1999/html">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-
-
 </head>
 <body>
 
-<!-- nav 영억 시작 -->
+<!-- nav 영역 시작-->
 <div th:replace="fragment/nav"></div>
 
 
 <div class="card m-3">
-
     <div class="card-header">
         Board View
     </div>
-
     <div class="card-body">
 
-        <table class="table border-top-1">
-
+        <table class="table border-top-1" >
             <tr>
                 <td class="col-2 text-center bg-light">제목</td>
                 <td th:text="${boardView.title}"></td>
             </tr>
-
             <tr>
                 <td class="col-2 text-center bg-light">작성자</td>
                 <td th:text="${boardView.writer}"></td>
             </tr>
-
             <tr>
                 <td class="col-2 text-center bg-light">내용</td>
                 <td th:text="${boardView.content}"></td>
             </tr>
-
             <tr>
                 <td class="col-2 text-center bg-light">첨부사진</td>
                 <td>
-                    <th:block th:if="${boardView.photo} != null">
-                        <img th:src="@{/upload/photo/{name} (name=${boardView.photo})}" width="300px">
+                    <th:block th:if="${boardView.photo != null}">
+                        <img th:src="@{/upload/photo/{name}(name=${boardView.photo})}" width="300">
                     </th:block>
                 </td>
             </tr>
-
             <tr>
                 <td class="col-2 text-center bg-light">작성일</td>
                 <td th:text="${boardView.regdate}"></td>
             </tr>
-
             <tr>
                 <td class="col-2 text-center bg-light">수정일</td>
                 <td th:text="${boardView.updatedate}"></td>
@@ -65,20 +52,21 @@
 
         <div class="text-end">
             <a class="btn btn-warning" th:href="@{/board/edit(bno=${boardView.bno}, p=${currentPageNum})}">수정</a>
-            <a class="btn btn-danger" id="delete" th:onclick="'deleteBoard('+${boardView.bno}+')'">삭제</a>
+            <a class="btn btn-danger" th:onclick="'deleteBoard('+${boardView.bno}+')'">삭제</a>
             <a class="btn btn-primary" th:href="@{/board/list(p=${currentPageNum})}">리스트</a>
         </div>
 
-        <!-- 댓글 영역 시작 -->
-        <div class="card">
 
-            <div class="card-header m-2 my-2">
+        <!-- 댓글 영역 시작 -->
+
+        <div class="card m-2 my-2">
+            <div class="card-header">
                 댓글
             </div>
-
             <div class="card-body">
 
-                <!-- 댓글 작성 영역 -->
+                <!--댓글 작성 영역-->
+
                 <div class="p-3 border-bottom">
                     <h5 class="title my-2">댓글 작성</h5>
                     <div class="mb-3">
@@ -90,25 +78,58 @@
                         <textarea class="form-control" rows="3" id="reply"></textarea>
                     </div>
                     <div class="mb-3">
-                        <input type="submit" value="등록" id="btn_reply" class="form-control btn btn-secondary">
+                        <input type="submit" value="등록" id="btn_reply" class="form-control btn btn-primary">
                     </div>
-
-
                 </div>
 
 
-
-                <!-- 댓글 리스트 영역 -->
+                <!--댓글 리스트 영역-->
                 <table class="table">
-
                     <tbody id="replyList">
 
-
-
                     </tbody>
-
                 </table>
 
+
+
+            </div>
+        </div>
+
+
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="replyEditModal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+
+    <div class="modal-dialog">
+
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">댓글 수정</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body">
+
+                <div class="mb-3">
+                    <label class="form-label">작성자</label>
+                    <input type="text" class="form-control" id="ereplyer" readonly>
+                    <input type="hidden" id="erno">
+                    <input type="hidden" id="ereplyDate">
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label">내용</label>
+                    <textarea class="form-control" rows="3" id="ereply"></textarea>
+                </div>
+
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" id="btn_edit" class="btn btn-primary">수정</button>
             </div>
 
         </div>
@@ -116,6 +137,7 @@
     </div>
 
 </div>
+
 
 <script>
 
@@ -132,6 +154,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+
+
 <script th:inline="javascript">
 
     var bno = [[${boardView.bno}]]
@@ -140,103 +165,191 @@
 
 <script>
 
+    let editModal;
 
-    $(document).ready(function (){
+    $(document).ready(function() {
 
+        editModal = new bootstrap.Modal('#replyEditModal')
 
-        // 댓글 리스트 출력 영역 캐스팅
-        let replyList = $('#replyList').val()
-
-        // 댓글 작성 버튼
-        $('#btn_reply').click(function (){
-
-            let reply = $('#reply').val()
-            let replyer = $('#replyer').val()
-
-            $.ajax({
-                url: '/reply',
-                type: 'post', // post put delete
-                data: {reply: reply, replyer: replyer},
-                success: function (data) {
-                    console.log('통신 결과', data)
-                    $('#replyList').append(data)
-                }
-            })
-            $.each(data, function(){
+        $("#btn_reply").on('click', insertReply)
+        $("#btn_edit").click(editReply)
 
 
+        $("#replyList").on('click', '.edit',showEditModal)
+        $("#replyList").on('click', '.del',deleteReply)
 
-                    let html = '<td class="col-2">'+reply.replyer+'</td>'
-                    html += '<td class="col">'+reply.reply+'</td>'
-                    html += '<td class="col-2">'+reply.replyDate+'</td>'
-                    html += '<td class="col-2">' +
-                        '<a href="javascript:showEditModal('+reply.rno+')" class="badge bg-warning text-decoration-none">수정</a>' +
-                        '<a href="javascript:deleteReply('+reply.rno+')" class="badge bg-danger text-decoration-none">삭제</a>' +
-                        '</td>'
-
-                    $('<tr></tr>').html().attr('class', 'fs-6 text-center').attr('tr-index', reply.rno).appendTo('#replyList')
-
-            })
-
-        })
-
-        // 페이지가 로드되면 리스트 출력
         setList()
 
     })
 
-
     function setList() {
 
-        let bno = bno
-        let reply = $('#reply').val()
-        let replyer = $('#replyer').val()
+        $.getJSON('/reply/' + bno, function(data) {
 
-        // 비동기 통신 : 댓글 리스트 가져오기
-        $.ajax({
-            url : '/reply/' + bno,
-            type : 'get',
-            success : function (data){
+            $.each(data, function(index, item) {
 
-                $.each(data, (index, item)=> {
+                let html = `<td class="col-2">${item.replyer}</td>
+                                <td class="col">${item.reply}</td>
+                                <td class="col-2">${item.replyDate}</td>
 
+                                <td class="col-2">
+                                    <a href="javascript:" class="badge bg-warning text-decoration-none edit">수정</a>
+                                    <a href="javascript:" class="badge bg-danger text-decoration-none del">삭제</a>
+                                </td>`
 
-                    // 새로운 tr을 만들어서 replyIndex 영역에 추가
-                    let html = '<td class="col-2">' + reply.replyer + '</td>'
-                    html += '<td class="col">' + reply.reply + '</td>'
-                    html += '<td class="col-2">' + reply.replyDate + '</td>'
-                    html += '<td class="col-2">' +
-                        '<a href="javascript:showEditModal(' + reply.rno + ')" class="badge bg-warning text-decoration-none">수정</a>' +
-                        '<a href="javascript:deleteReply(' + reply.rno + ')" class="badge bg-danger text-decoration-none">삭제</a>' +
-                        '</td>'
+                const newTR = $('<tr></tr>').attr('class', 'fs-6 text-center').attr('tr-index', item.rno).html(html)
 
-                    $('<tr></tr>').html(html).attr('class', 'fs-6 text-center').attr('tr-index', reply.rno).appendTo('#replyList')
-
-                })
-
-            }
-
+                $('#replyList').append(newTR)
             })
+
+        })
 
     }
 
 
+    function insertReply() {
+
+        // 서버로 전송할 payload
+        const payload = {
+
+            bno : bno,
+            reply : $("#reply").val(),
+            replyer : $("#replyer").val()
+        }
+
+        $.ajax({
+
+            url: '/reply',
+            type: 'post',
+            contentType: 'application/json',
+            data: JSON.stringify(payload),
+            dataType: 'json',
+
+            success: function(data) {
+
+                const reply = data
+
+                let html = '<td class="col-2">'+reply.replyer+'</td>'
+                html += '<td class="col">'+reply.reply+'</td>'
+                html += '<td class="col-2">'+reply.replyDate+'</td>'
+                html += '<td class="col-2">' +
+                    '<a href="javascript:showEditModal('+reply.rno+')" class="badge bg-warning text-decoration-none">수정</a>' +
+                    '<a href="javascript:deleteReply('+reply.rno+')" class="badge bg-danger text-decoration-none">삭제</a>' +
+                    '</td>'
+
+
+                const  newTR = $('<tr></tr>').attr('class', 'fs-6 text-center').attr('tr-index', reply.rno).html(html)
+
+                $('#replyList').append(newTR)
+
+                $("#reply").val()
+                $("#replyer").val()
+
+            },
+            error : function(request, httpStatus, error) {
+
+            }
+
+        })
+
+    }
+
+
+    function deleteReply(e) {
+
+        e.preventDefault()
+
+        if(!confirm('삭제하시겠습니까?')) {
+            return;
+        }
+
+        const rno = $(this).parent('td').parent('tr').attr('tr-index')
+
+        $.ajax({
+            url: '/reply/' + rno,
+            type: 'delete',
+
+            success: function(data) {
+
+                if(data==1) {
+
+                    $('tr[tr-index="'+rno+'"]').remove()
+                    alert('삭제되었습니다.')
+
+                } else {
+
+                    alert('삭제할 대상이 존재하지 않습니다.')
+                }
+            },
+            error: function(request, status, error) {
+
+            }
+
+        })
+
+    }
+
+
+    function showEditModal(e) {
+
+        e.preventDefault()
+
+        editModal.show()
+
+        const editTD = $(this).parent('td').parent('tr').children('td')
+        const rno = $(this).parent('td').parent('tr').attr('tr-index')
+
+        $('#erno').val(rno)
+        $('#ereplyer').val($(editTD).eq(0).text())
+        $('#ereply').val($(editTD).eq(1).text())
+        $('#ereplyDate').val($(editTD).eq(2).text())
+
+    }
+
+
+    function editReply() {
+
+        // 서버로 전송할 payload
+        // put => 전체 데이터의 변경. 모든 데이터를 서버로 전송, 값이 없는 경우 기본값으로 저장
+        const payload = {
+
+            bno : bno,
+            rno : $('#erno').val(),
+            reply : $("#ereply").val(),
+            replyer : $("#ereplyer").val(),
+            replyDate : $('#ereplyDate').val()
+        }
+
+        $.ajax({
+
+            url: '/reply/' + payload.rno,
+            type: 'put',
+            contentType: 'application/json',
+            data: JSON.stringify(payload),
+            dataType: 'json',
+
+            success: function(data) {
+
+                const editTD = $('tr[tr-index="'+payload.rno+'"]>td')
+                $(editTD).eq(1).text(payload.reply)
+
+                editModal.hide()
+            },
+
+            error: function(request, status, error) {
+
+            }
+
+        })
+
+    }
+
 </script>
-<!--
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-<script th:inline="javascript">
-
-    var bno = [[${boardView.bno}]]
-
-</script>
-
-
-<script>
+<!--<script>
 
     let replyList;
+    let editModal;
 
     document.addEventListener('DOMContentLoaded', () => {
 
@@ -244,50 +357,22 @@
         replyList = document.querySelector('#replyList')
 
         // 댓글 작성 버튼
-        const btn_reply = document.querySelector("#btn_reply")
+        const btn_reply = document.querySelector('#btn_reply')
+
+        // 댓글 수정 버튼
+        const btn_edit = document.querySelector('#btn_edit')
+
+        editModal = new bootstrap.Modal('#replyEditModal')
 
         // 버튼 이벤트 등록
-        btn_reply.addEventListener('click', ()=>{
+        btn_reply.addEventListener('click', insertReply)
+        btn_edit.addEventListener('click', editReply)
 
-            // 서버로 전송할 payload
-            const payload = {
-                bno : bno,
-                reply : document.querySelector("#reply").value,
-                replyer : document.querySelector("#replyer").value
-            }
-
-            console.log("payload", payload)
-
-            axios.post('/reply',payload)
-                .then(res => {
-                    console.log('post->response', res.data)
-
-                    const reply = res.data
-
-                    // replyList 영역에 새로운 tr을 추가
-                    const  newTR = document.createElement('tr')
-
-                    let html = '<td class="col-2">'+reply.replyer+'</td>'
-                    html += '<td class="col">'+reply.reply+'</td>'
-                    html += '<td class="col-2">'+reply.replyDate+'</td>'
-                    html += '<td class="col-2">' +
-                        '<a href="javascript:showEditModal('+reply.rno+')" class="badge bg-warning text-decoration-none">수정</a>' +
-                        '<a href="javascript:deleteReply('+reply.rno+')" class="badge bg-danger text-decoration-none">삭제</a>' +
-                        '</td>'
-
-                    newTR.innerHTML = html
-                    newTR.setAttribute('class', 'fs-6 text-center')
-                    newTR.setAttribute('tr-index', reply.rno)
-
-                })
-                .catch(err => console.log(err))
-
-        })
-
-        // 페이지가 로드되면 리스트 출력
+        // 페이지가 로드되는 리스트 출력
         setList()
 
     })
+
 
     function setList() {
 
@@ -329,8 +414,140 @@
 
     }
 
-</script>
--->
+
+    function  insertReply() {
+
+
+            // 서버로 전송할 payload
+            const payload = {
+
+                bno : bno,
+                reply : document.querySelector("#reply").value,
+                replyer : document.querySelector("#replyer").value
+            }
+
+            console.log("payload", payload)
+
+            axios.post('/reply', payload)
+
+                .then(res => {
+
+                    console.log('post -> response' + res.data)
+
+                    const reply = res.data
+
+                    // replyList 영역에 새로운 tr을 추가해주면 된다
+                    const  newTR = document.createElement('tr')
+
+                    let html = '<td class="col-2">'+reply.replyer+'</td>'
+                    html += '<td class="col">'+reply.reply+'</td>'
+                    html += '<td class="col-2">'+reply.replyDate+'</td>'
+                    html += '<td class="col-2">' +
+                        '<a href="javascript:showEditModal('+reply.rno+')" class="badge bg-warning text-decoration-none">수정</a>' +
+                        '<a href="javascript:deleteReply('+reply.rno+')" class="badge bg-danger text-decoration-none">삭제</a>' +
+                        '</td>'
+
+                    newTR.innerHTML = html
+                    newTR.setAttribute('class', 'fs-6 text-center')
+                    newTR.setAttribute('tr-index', reply.rno)
+
+                    // 부모 태그에 요소 추가
+                    replyList.appendChild(newTR)
+
+                    document.querySelector("#reply").value
+                    document.querySelector("#replyer").value
+                })
+
+                .catch(err => console.log(err))
+
+    }
+
+
+    function deleteReply(rno) {
+
+        if(!confirm('삭제하시겠습니까?')) {
+
+            return;
+        }
+
+        console.log('rno >>>', rno)
+
+        axios.delete('/reply/' + rno)
+
+            .then(res => {
+
+                console.log('delete -> response -> ' + res.data)
+
+                if (res.data == 1) {
+
+                    // 화면에서 tr-index == rno 행을 삭제
+                    // 삭제 대상 행
+                    const delTr = document.querySelector('tr[tr-index="' + rno + '"]')
+                    replyList.removeChild(delTr)
+
+                    alert('삭제되었습니다.')
+
+                } else {
+
+                    alert('삭제할 대상이 존재하지 않습니다.')
+                }
+
+            })
+
+            .catch(err => console.log(err))
+
+    }
+
+
+    function showEditModal(rno) {
+
+        editModal.show()
+
+        const editTD = document.querySelectorAll('tr[tr-index="'+rno+'"]>td')
+
+        console.log(editTD[0].textContent)
+        console.log(editTD[1].textContent)
+        console.log(editTD[2].textContent)
+
+        document.querySelector('#erno').value=rno
+        document.querySelector('#ereplyer').value=editTD[0].textContent
+        document.querySelector('#ereply').value=editTD[1].textContent
+        document.querySelector('#ereplyDate').value=editTD[2].textContent
+
+    }
+
+
+    function editReply() {
+
+        // 서버로 전송할 payload
+        // put => 전체 데이터의 변경. 모든 데이터를 서버로 전송, 값이 없는 경우 기본값으로 저장
+        const payload = {
+
+            bno : bno,
+            rno : document.querySelector('#erno').value,
+            reply : document.querySelector("#ereply").value,
+            replyer : document.querySelector("#ereplyer").value,
+            replyDate : document.querySelector('#ereplyDate').value
+        }
+
+        console.log(payload)
+
+        axios.put('/reply/' + payload.rno, payload)
+
+            .then(res => {
+                console.log('put -> response -> ', res.data)
+
+                const editTD = document.querySelectorAll('tr[tr-index="'+payload.rno+'"]>td')
+                editTD[1].textContent = payload.reply
+
+                editModal.hide()
+            })
+
+            .catch(err => console.log(err))
+
+    }
+
+</script>-->
 
 </body>
 </html>
