--- a/spring/Boot/SpringBootBoard/src/main/resources/templates/board/write.html
+++ b/spring/Boot/SpringBootBoard/src/main/resources/templates/board/write.html
@@ -20,27 +20,29 @@
 
       <form method="post" enctype="multipart/form-data">
 
-      <div class="mb-3">
-        <label for="title" class="form-label">제목</label>
-        <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력해주세요">
-      </div>
+        <div class="mb-3">
+          <label for="title" class="form-label">제목</label>
+          <input type="text" class="form-control" id="title" name="title">
+        </div>
         <div class="mb-3">
           <label for="writer" class="form-label">작성자</label>
-          <input type="text" class="form-control" id="writer" name="writer" placeholder="닉네임">
+          <input type="text" class="form-control" th:value="${#authentication.principal.boardMember.username}" readonly>
+          <input type="hidden" id="writer" name="writer" th:value="${#authentication.principal.boardMember.idx}" >
         </div>
-      <div class="mb-3">
-        <label for="content" class="form-label">내용</label>
-        <textarea class="form-control" id="content" name="content" rows="3"></textarea>
-      </div>
+        <div class="mb-3">
+          <label for="content" class="form-label">내용</label>
+          <textarea class="form-control" id="content" name="content" rows="3"></textarea>
+        </div>
         <div class="mb-3">
           <label for="formFile" class="form-label">사진</label>
           <input class="form-control" type="file" id="formFile" name="formFile">
         </div>
         <div class="mb-3">
-          <input class="btn btn-secondary" type="submit" value="글등록">
+          <input class="btn btn-primary" type="submit">
         </div>
 
       </form>
+
 
     </div>
   </div>
